# Grade-Management-System

./: CMakeLists.txt  LICENSE  README.md  学生基本信息.csv  学生成绩信息.csv  课程基本信息.csv
Inc/: GPA.h  addCourseBaseInform.h  addStudentBaseInform.h  addStudentGradeInform.h  changeCourseBaseInform.h  changeStudentBaseInform.h  changeStudentGradeInform.h  courseBaseInformLinkedList.h  deleteCourseBaseInform.h  deleteStudentBaseInform.h  deleteStudentGradeInform.h  exportData.h  findCourseBaseInform.h  findStudentBaseInform.h  findStudentGradeInform.h  init.h  initCourseBaseInform.h  initStudentBaseInform.h  initStudentGradeInform.h  main.h  menu.h  modeContinue.h  path.h  sort.h  studentBaseInformLinkedList.h  studentGradeInformLinkedList.h  subMenu.h
Src/: GPA.c  addCourseBaseInform.c  addStudentBaseInform.c  addStudentGradeInform.c  changeCourseBaseInform.c  changeStudentBaseInform.c  changeStudentGradeInform.c  courseBaseInformLinkedList.c  deleteCourseBaseInform.c  deleteStudentBaseInform.c  deleteStudentGradeInform.c  exportData.c  findCourseBaseInform.c  findStudentBaseInform.c  findStudentGradeInform.c  init.c  initCourseBaseInform.c  initStudentBaseInform.c  initStudentGradeInform.c  main.c  menu.c  modeContinue.c  path.c  sort.c  studentBaseInformLinkedList.c  studentGradeInformLinkedList.c  subMenu.c
